# controller/user.go
@@ -39,9 +39,9 @@ type UserLoginResponse struct {
 func Register(c *gin.Context) {
 	username := c.Query("username")
 	password := c.Query("password")
-	token := username + password
 
 	userLoginData, err := service.UserLogin{}.Register(username, password)
+
 	if err != nil {
 		c.JSON(http.StatusOK, UserLoginResponse{
 			Response: model.Response{StatusCode: 1, StatusMsg: err.Error()},
@@ -49,21 +49,10 @@ func Register(c *gin.Context) {
 		return
 	}
 
-	if _, exist := usersLoginInfo[token]; exist {
-		c.JSON(http.StatusOK, UserLoginResponse{
-			Response: model.Response{StatusCode: 1, StatusMsg: "User already exist"},
-		})
-	} else {
-		c.JSON(http.StatusOK, UserLoginResponse{
-			Response:      model.Response{StatusCode: 0, StatusMsg: "注册成功"},
-			UserLoginData: userLoginData,
-		})
-	}
-}
-
-type UserResponse struct {
-	Response     model.Response
-	UserInfoData *service.UserInfoData
+	c.JSON(http.StatusOK, UserLoginResponse{
+		Response:      model.Response{StatusCode: 0, StatusMsg: "注册成功"},
+		UserLoginData: userLoginData,
+	})
 }
 
 // Login 用户登录
@@ -74,24 +63,27 @@ type UserResponse struct {
 // @Produce application/json
 // @Param username query string true "账号"
 // @Param password query string true "密码"
-// @Success 200 {object} UserResponse
-// @Router /douyin/user/register/ [get]
+// @Success 200 {object} UserLoginResponse
+// @Router /douyin/user/login/ [post]
 func Login(c *gin.Context) {
-	// username := c.Query("username")
-	// password := c.Query("password")
+	username := c.Query("username")
+	password := c.Query("password")
+	userLoginData, err := service.UserLogin{}.Login(username, password)
+	if err != nil {
+		c.JSON(http.StatusOK, UserLoginResponse{
+			Response: model.Response{StatusCode: 1, StatusMsg: err.Error()},
+		})
+		return
+	}
+	c.JSON(http.StatusOK, UserLoginResponse{
+		Response:      model.Response{StatusCode: 0, StatusMsg: "登录成功"},
+		UserLoginData: userLoginData,
+	})
+}
 
-	// token := username + password
-
-	// if user, exist := usersLoginInfo[token]; exist {
-	// 	c.JSON(http.StatusOK, UserLoginResponse{
-	// 		Response:      model.Response{StatusCode: 0},
-	// 		UserLoginData: &service.UserLogin{},
-	// 	})
-	// } else {
-	// 	c.JSON(http.StatusOK, UserLoginResponse{
-	// 		Response: model.Response{StatusCode: 1, StatusMsg: "User doesn't exist"},
-	// 	})
-	// }
+type UserInfoResponse struct {
+	Response     model.Response
+	UserInfoData *service.UserInfoData
 }
 
 func UserInfo(c *gin.Context) {
